feature: enhanced reference deserializer and on-demand reference cache